Revert "Change of Progresslist Mini Structure"
This reverts commit de628ffd98c187790049d0f7ce348f24286eaa92.

--- a/views/playground/workflow-comments/final-approver/index.html.twig
+++ b/views/playground/workflow-comments/final-approver/index.html.twig
@@ -85,21 +85,21 @@
     <div class="panel with-timeline">
         <div class="panel__title u-display-inline-block">Content Pending Approval</div>
         <div class="progress-list progress-list-mini u-float-right">
-            <a href="#" class="progress-list__item progress-list__item--blue">
+            <a href="#" class="progress-list__item progress-list__item--current">
                 <span class="progress-list__label">
                     Draft
                 </span>
                 <span class="progress-list__arrow">&gt;</span>
             </a>
 
-            <a href="#" class="progress-list__item progress-list__item--orange">
+            <a href="#" class="progress-list__item progress-list__item--intermediate">
                 <span class="progress-list__label">
                     Pending Approval
                 </span>
                 <span class="progress-list__arrow">&gt;</span>
             </a>
 
-            <a href="#" class="progress-list__item progress-list__item--white">
+            <a href="#" class="progress-list__item">
                 <span class="progress-list__label">
                     Published
                 </span>
