--- a/views/playground/workflow-comments/final-approver/index_reject.html.twig
+++ b/views/playground/workflow-comments/final-approver/index_reject.html.twig
@@ -80,7 +80,7 @@
     <div class="panel panel--danger"><i aria-hidden="true" class="icon-times-circle panel__icon"></i>
         <div class="panel__title u-display-inline-block">Content Rejected</div>
         <div class="progress-list progress-list-mini u-float-right">
-            <a href="#" class="progress-list__item progress-list__item--blue">
+            <a href="#" class="progress-list__item progress-list__item--current">
                 <span class="progress-list__label">
                     Draft
                 </span>
@@ -92,7 +92,7 @@
                 </span>
                 <span class="progress-list__arrow">&gt;</span>
             </a>
-            <a href="#" class="progress-list__item progress-list__item--white">
+            <a href="#" class="progress-list__item">
                 <span class="progress-list__label">
                     Published
                 </span>
