Apply white text at the view history link at panel—danger

--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -136,3 +136,7 @@
     margin: 10px 0 0;
     text-align: right;
 }
+
+.panel--danger a.view-history-link {
+    color: color(white) !important;
+}
