--- a/views/playground/workflow-comments/tab_reviewer_rejected.html.twig
+++ b/views/playground/workflow-comments/tab_reviewer_rejected.html.twig
@@ -91,11 +91,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel__actions panel__actions--right">
+                <div class="panel__actions">
                     {{
                         html.button({
                             'label': 'View detailed history of comments',
-                            'class': 'btn--naked btn--white',
+                            'class': 'btn--naked view-history-link',
                             'type': 'link',
                             'href': '#document-history'
                         })
@@ -111,11 +111,11 @@
         <i aria-hidden="true" class="icon-times-circle panel__icon"></i>
         <div class="panel__title u-display-inline-block">Approval Rejected</div>
         <div class="panel__body">
-            <div class="panel__actions panel__actions--right">
+            <div class="panel__actions">
                 {{
                     html.button({
                         'label': 'View detailed history of comments',
-                        'class': 'btn--naked btn--white',
+                        'class': 'btn--naked view-history-link',
                         'type': 'link',
                         'href': '#document-history'
                     })
