--- a/views/playground/workflow-comments/tab_reviewer_pending.html.twig
+++ b/views/playground/workflow-comments/tab_reviewer_pending.html.twig
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="panel__actions">
                 {{
                     html.button({
@@ -118,7 +118,7 @@
                 {{
                     html.button({
                         'label': 'View detailed history of comments',
-                        'class': 'btn--naked u-float-right',
+                        'class': 'btn--naked view-history-link',
                         'type': 'link',
                         'href': '#document-history'
                     })
@@ -155,7 +155,7 @@
                 {{
                     html.button({
                         'label': 'View detailed history of comments',
-                        'class': 'btn--naked u-float-right',
+                        'class': 'btn--naked view-history-link',
                         'type': 'link',
                         'href': '#document-history'
                     })
@@ -163,7 +163,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="u-text-align-center">UI CONTENT GOES HERE</div>
 
     <div id="workflow-approve" class="modal modal__large">
