Make sure links and help blocks meet AA contrast when used in the tab settings panel

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -27,6 +27,16 @@
     > *:last-child {
         margin-bottom: 0;
     }
+
+    // Ensure AA colour contrast
+    [href] {
+        color: color(link, dark);
+    }
+
+    // Ensure AA colour contrast
+    .help-block {
+        color: color(text);
+    }
 }
 
 
