Update SR a11y mixin name
Used the old mixin name of the ‘visuallyhidden’ before.

--- a/stylesheets/_component.timeline.scss
+++ b/stylesheets/_component.timeline.scss
@@ -488,6 +488,10 @@ $timeline-content-border: #ccc;
     width: 100%;
 }
 
+.timeline__message-label {
+    @include sr-hide;
+}
+
 .timeline__form__controls {
     @include clear-fix(true);
 
