Stop using empty alt attributes on user guide menu and notifications
Notification change will probably need to be done in product

--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -44,7 +44,7 @@
 
             <div class="notification">
                 <div class="media">
-                    <img src="/images/favicons/xfp/android-chrome-48x48.png" alt="" class="media__image" />
+                    <img src="/images/favicons/xfp/android-chrome-48x48.png" role="presentation" class="media__image" />
 
                     <div class="media__body">
                         <button
@@ -72,7 +72,7 @@
 
             <div class="notification">
                 <div class="media">
-                    <img src="/images/favicons/xfp/android-chrome-48x48.png" alt="" class="media__image" />
+                    <img src="/images/favicons/xfp/android-chrome-48x48.png" role="presentation" class="media__image" />
 
                     <div class="media__body">
                         <button
@@ -100,7 +100,7 @@
 
             <div class="notification">
                 <div class="media">
-                    <img src="/images/favicons/xfp/android-chrome-48x48.png" alt="" class="media__image" />
+                    <img src="/images/favicons/xfp/android-chrome-48x48.png" role="presentation" class="media__image" />
 
                     <div class="media__body">
                         <button
@@ -128,7 +128,7 @@
 
             <div class="notification">
                 <div class="media">
-                    <img src="/images/favicons/xfp/android-chrome-48x48.png" alt="" class="media__image" />
+                    <img src="/images/favicons/xfp/android-chrome-48x48.png" role="presentation" class="media__image" />
 
                     <div class="media__body">
                         <button
@@ -156,7 +156,7 @@
 
             <div class="notification">
                 <div class="media">
-                    <img src="/images/favicons/xfp/android-chrome-48x48.png" alt="" class="media__image" />
+                    <img src="/images/favicons/xfp/android-chrome-48x48.png" role="presentation" class="media__image" />
 
                     <div class="media__body">
                         <button
