--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -161,7 +161,7 @@
             {{
                 html.link({
                     'class': 'toolbar-help-link',
-                    'href': '#',
+                    'href': '#user-guides',
                     'icon': 'question-sign',
                     'label': options.label|default('user guides'),
                     'data-toggle': 'dropdown'
