Revert "Stop using empty alt attributes on user guide menu and notifications"
This reverts commit 3f54ee56ced81398dc1fd9e61f09eb36c6de2603.

--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -161,7 +161,7 @@
             {{
                 html.link({
                     'class': 'toolbar-help-link',
-                    'href': '#user-guides',
+                    'href': '#',
                     'icon': 'question-sign',
                     'label': options.label|default('user guides'),
                     'data-toggle': 'dropdown'
