--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1086,9 +1086,9 @@ data-*      | string    | Data attributes, eg: `'data-foo': 'bar'`
     {% elseif options.image is defined and options.image is not empty %}
         {% set alt = ' role=presentation' %}
         {% if options.image_alt is defined and options.image_alt is not empty %}
-            {% set alt = ' ' ~ options.image_alt %} 
+            {% set alt = ' alt="' ~ options.image_alt ~ '"' %} 
         {% endif %}
-        <img src="{{ options.image }}"{{ alt|default }} class="media__image" />
+        <img src="{{ options.image }}"{{ alt|default|raw }} class="media__image" />
     {% endif %}
         <div class="media__body">
         {% if options.action is defined and options.action is not empty %}
