Add bypass block example
Required for Pulsar UIs to meet 2.4.1 Bypass Blocks: (Level A)

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -60,3 +60,21 @@ a.disabled {
     cursor: not-allowed !important;
   }
 }
+
+.skip-link {
+  background-color: color(white);
+  position: absolute;
+  left: -9999px;
+  padding: 0 10px;
+  text-align: left;
+  top: -9999px;
+  z-index: $zindex-nav;
+
+  &:focus {
+    display: block;
+    left: 0;
+    position: relative;
+    top: 0;
+    width: 100%;
+  }
+}
